# bagman

./: README  bagman.cabal  g
data/: open-reply-rules  open-reply.mem  open.mem
src/: Main.hs  Mvs.hs
