name:           bagman
version:        0.1
license:        GPL
license-file:   LICENSE
author:         dan corson <danl@alum.mit.edu>
synopsis:       for my backgammon analyses
build-type:     Simple
build-depends:  FUtil, array, base, haskell98, multiset, containers

executable:     bagman
main-is:        Main.hs
hs-source-dirs: src
